[package]
name = "lvis"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Visualize lsof output"
repository = "https://github.com/brylee10/lvis"
readme = "README.md"
exclude = [
    "assets/*",
]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
eframe = "0.31.0"
egui = "0.31.0"
env_logger = "0.11.6"
log = "0.4.26"
nix = { version = "0.29.0", features = ["term", "process", "fs"] }
petgraph = "0.6"
thiserror = "2.0.11"
